update layout full menu and button animations

--- a/assets/about.html
+++ b/assets/about.html
@@ -29,7 +29,7 @@
     <header>
         <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-warning bg-gradient">
             <div class="container">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="../index.html">
                     <img src="./img/Logo-mamizey-nobg-nav.webp" width="108" alt="Ayam Geprek Dapur Mamizey">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,6 +39,9 @@
                     <ul class="navbar-nav d-flex justify-content-evenly w-100">
                         <li class="nav-item">
                             <a class="nav-link" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./full menu.html">Menu</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./how to order.html">Cara Order</a>
