--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                             <a class="nav-link active" aria-current="page" href="#"><span class="border-bottom border-dark">Home</span></a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="./assets/full menu.html">Menu</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="./assets/how to order.html">Cara Order</a>
                         </li>
                         <li class="nav-item">
@@ -189,14 +192,16 @@
         <!-- Carousel wrapper -->
 
         <div class="container pt-3">
-            <div class="d-grid d-md-flex justify-content-sm-center">
-                <a class="btn btn-warning shadow text-white" href="#">Lihat semua menu</a>
+            <div data-aos="zoom-in" data-aos-duration="1000">
+                <div class="d-grid d-md-flex justify-content-sm-center">
+                    <a class="btn btn-warning shadow text-white" href="#">Lihat semua menu</a>
+                </div>
             </div>
             <hr>
         </div>
 
         <div class="container pt-4">
-            <div data-aos="zoom-in-down" data-aos-duration="1000">
+            <div data-aos="zoom-in-up" data-aos-duration="1000">
                 <h3 class="text-center">Discover
                     <span class="text-warning">Our Story</span>
                 </h3>
