--- a/assets/how to order.html
+++ b/assets/how to order.html
@@ -29,7 +29,7 @@
     <header>
         <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-warning bg-gradient">
             <div class="container">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="../index.html">
                     <img src="./img/Logo-mamizey-nobg-nav.webp" width="108" alt="Ayam Geprek Dapur Mamizey">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,6 +39,9 @@
                     <ul class="navbar-nav d-flex justify-content-evenly w-100">
                         <li class="nav-item">
                             <a class="nav-link" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./full menu.html">Menu</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#"><span class="border-bottom border-dark">Cara Order</span></a>
@@ -92,7 +95,7 @@
 
             <div class="container pt-3">
                 <div class="d-grid d-md-flex justify-content-sm-center">
-                    <a class="btn btn-danger shadow text-white" href="#">Pesan sekarang</a>
+                    <a class="btn btn-secondary shadow text-white ordernow" href="#">Pesan sekarang</a>
                 </div>
                 <hr>
             </div>
@@ -222,8 +225,10 @@
         <!-- Carousel wrapper -->
 
         <div class="container pt-3">
-            <div class="d-grid d-md-flex justify-content-sm-center">
-                <a class="btn btn-warning shadow text-white" href="#">Lihat semua menu</a>
+            <div data-aos="zoom-in" data-aos-duration="1000">
+                <div class="d-grid d-md-flex justify-content-sm-center">
+                    <a class="btn btn-warning shadow text-white" href="#">Lihat semua menu</a>
+                </div>
             </div>
             <hr>
         </div>
