change button color and text, change layout full menu page

--- a/assets/contact.html
+++ b/assets/contact.html
@@ -210,7 +210,7 @@
         <div class="container pt-3">
             <div data-aos="zoom-in" data-aos-duration="1000">
                 <div class="d-grid d-md-flex justify-content-sm-center">
-                    <a class="btn btn-secondary shadow text-white ordernow" href="#">Pesan sekarang</a>
+                    <a class="btn btn-warning shadow text-white" href="./how to order.html">Lihat cara pemesanan</a>
                 </div>
             </div>
             <hr>
