--- a/assets/how to order.html
+++ b/assets/how to order.html
@@ -95,7 +95,7 @@
 
             <div class="container pt-3">
                 <div class="d-grid d-md-flex justify-content-sm-center">
-                    <a class="btn btn-secondary shadow text-white ordernow" href="#">Pesan sekarang</a>
+                    <a class="btn btn-secondary shadow text-white ordernow" href="https://api.whatsapp.com/send/?phone=6289644937526&amp;text=Format%20Order%0A%0ANama%20%3A%20%0AAlamat%20Lengkap%20%3A%20%0ANama%20Produk%20Pesanan%20%3A%20%0AJumlah%20Pesanan%20%3A%20">Pesan sekarang</a>
                 </div>
                 <hr>
             </div>
@@ -227,7 +227,7 @@
         <div class="container pt-3">
             <div data-aos="zoom-in" data-aos-duration="1000">
                 <div class="d-grid d-md-flex justify-content-sm-center">
-                    <a class="btn btn-warning shadow text-white" href="#">Lihat semua menu</a>
+                    <a class="btn btn-warning shadow text-white" href="./full menu.html">Lihat semua menu</a>
                 </div>
             </div>
             <hr>
