--- a/assets/full menu.html
+++ b/assets/full menu.html
@@ -80,53 +80,95 @@
             <div data-aos="zoom-in" data-aos-duration="1000">
                 <div class="container pt-4">
                     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
-                        <div class="col">
-                            <figure class="figure">
-                                <img src="./img/Farm-1.webp" class="figure-img img-fluid rounded" alt="...">
-                                <figcaption class="figure-caption">A caption for the above image.</figcaption>
-                            </figure>
+                        <div class="col py-1">
+                            <div class="card">
+                                <img src="./img/test2.webp" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col">
-                            <figure class="figure">
-                                <img src="./img/Farm-1.webp" class="figure-img img-fluid rounded" alt="...">
-                                <figcaption class="figure-caption">A caption for the above image.</figcaption>
-                            </figure>
+                        <div class="col py-1">
+                            <div class="card">
+                                <img src="./img/test6.webp" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col">
-                            <figure class="figure">
-                                <img src="./img/Farm-1.webp" class="figure-img img-fluid rounded" alt="...">
-                                <figcaption class="figure-caption">A caption for the above image.</figcaption>
-                            </figure>
+                        <div class="col py-1">
+                            <div class="card">
+                                <img src="./img/test5.webp" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col">
-                            <figure class="figure">
-                                <img src="./img/Farm-1.webp" class="figure-img img-fluid rounded" alt="...">
-                                <figcaption class="figure-caption">A caption for the above image.</figcaption>
-                            </figure>
+                        <div class="col py-1">
+                            <div class="card">
+                                <img src="./img/test4.webp" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col">
-                            <figure class="figure">
-                                <img src="./img/Farm-1.webp" class="figure-img img-fluid rounded" alt="...">
-                                <figcaption class="figure-caption">A caption for the above image.</figcaption>
-                            </figure>
+                        <div class="col py-1">
+                            <div class="card">
+                                <img src="./img/test3.webp" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col">
-                            <figure class="figure">
-                                <img src="./img/Farm-1.webp" class="figure-img img-fluid rounded" alt="...">
-                                <figcaption class="figure-caption">A caption for the above image.</figcaption>
-                            </figure>
+                        <div class="col py-1">
+                            <div class="card">
+                                <img src="./img/test1.webp" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col">
-                            <figure class="figure">
-                                <img src="./img/Farm-1.webp" class="figure-img img-fluid rounded" alt="...">
-                                <figcaption class="figure-caption">A caption for the above image.</figcaption>
-                            </figure>
+                        <div class="col py-1">
+                            <div class="card">
+                                <img src="./img/Soto-1.webp" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col">
-                            <figure class="figure">
-                                <img src="./img/Farm-1.webp" class="figure-img img-fluid rounded" alt="...">
-                                <figcaption class="figure-caption">A caption for the above image.</figcaption>
-                            </figure>
+                        <div class="col py-1">
+                            <div class="card">
+                                <img src="./img/Soto-2.webp" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col py-1">
+                            <div class="card">
+                                <img src="./img/Tempe-1.webp" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col py-1">
+                            <div class="card">
+                                <img src="./img/Tahu-1.webp" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -134,7 +176,7 @@
                 <div class="container pt-3">
                     <div data-aos="zoom-in" data-aos-duration="1000">
                         <div class="d-grid d-md-flex justify-content-sm-center">
-                            <a class="btn btn-secondary shadow text-white ordernow" href="#">Pesan sekarang</a>
+                            <a class="btn btn-warning shadow text-white" href="./how to order.html">Lihat cara pemesanan</a>
                         </div>
                     </div>
                     <hr>
