--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <div class="container pt-3">
             <div data-aos="zoom-in" data-aos-duration="1000">
                 <div class="d-grid d-md-flex justify-content-sm-center">
-                    <a class="btn btn-warning shadow text-white" href="#">Lihat semua menu</a>
+                    <a class="btn btn-warning shadow text-white" href="./assets/full menu.html">Lihat semua menu</a>
                 </div>
             </div>
             <hr>
