--- a/assets/about.html
+++ b/assets/about.html
@@ -81,6 +81,14 @@
                             Kami berharap untuk dapat terus memberikan produk yang terbaik, saat ini dan selamanya.</p>
                         <p class="card-text"><small class="text-muted fst-italic"><u>Founder Dapur Mamizey</u></small></p>
                     </div>
+                    <hr>
+                    <div class="container pt-3">
+                        <div data-aos="zoom-in" data-aos-anchor-placement="top-bottom" data-aos-duration="1000">
+                            <h3 class="text-center">Our
+                                <span class="text-warning">Farmer Landscape</span>
+                            </h3>
+                        </div>
+                    </div>
                     <div class="container">
                         <div class="row row-cols-2 row-cols-sm-2 row-cols-md-4">
                             <div class="col p-1">
