update about page

--- a/assets/about.html
+++ b/assets/about.html
@@ -67,18 +67,18 @@
                     <h5 class="card-header">Tentang Dapur Mamizey</h5>
                       <div class="card-body">
                         <p class="card-text text-start lh-base">Dapur Mamizey pertama kali dibuka pada tahun 2020. Awalnya ini hanya bagian dari rencana untuk memperoleh penghasilan lebih karena tren periode wfh selama pandemi. 
-                            Kami bekerja keras untuk menemukan ide bisnis apa yang ingin kami mulai, setelah beberapa waktu berlalu ..kami berpikir bahwa ada kesempatan untuk mencoba menjual makanan. 
+                            Kami bekerja keras untuk menemukan ide bisnis apa yang ingin kami mulai, setelah beberapa waktu ..kami berpikir bahwa ada kesempatan untuk mencoba menjual makanan. 
                             Ini pun berdasarkan hasil observasi dari naik nya jumlah pengguna maupun transaksi pembelian makanan dan minuman secara online. 
                             Banyak orang yang menghindari kontak atau pembelian secara langsung.
-                            Berdasarkan paparan sebelumnya, kami melihat pula ada peternak ayam yang lokasinya dekat dengan lokasi kami. Ini membuat kami akhirnya memutuskan untuk membuat dan memasarkan produk olahan ayam. 
-                            Karena lokasi peternak yang dekat, kami pun dapat secara rutin mengunjungi untuk melihat bagaimana kebersihan, sampai dengan proses pemotongan. 
+                            Berdasarkan paparan sebelumnya, kami melihat ada peternak ayam yang lokasinya dekat dengan lokasi kami. Ini membuat kami akhirnya memutuskan untuk membuat dan memasarkan produk olahan ayam. 
+                            Karena lokasi peternak yang dekat, kami pun dapat secara rutin mengunjungi untuk melihat bagaimana kualitas produk ayam sampai dengan proses pemotongan. 
                             Kami melakukan ini untuk memastikan jika nantinya produk yang kami hasilkan berasal dari bahan baku yang bersih dan berkualitas.</p>
 
-                        <p>Setelah melalui banyak uji coba rasa, pemberian sampel, pengumpulan survei atau opini baik dari lingkungan sekitar, keluarga, rekan maupun perusahaan sekitar ..kami pun akhirnya dapat membuat rasa yang sebagian besar diterima dan disukai oleh banyak orang. 
-                            Masukan-masukan berharga pun kami kumpulkan sebagai bahan review, pelajaran dan pengembangan produk dimasa mendatang.
-                            Kami mulai menjual dan mempromosikan produk olahan kami melalui beberapa platform media sosial, seperti Instagram, WhatsApp dan sebagainya. Hasilnya adalah, kami menerima banyak respon positif. 
+                        <p>Setelah melalui banyak uji coba rasa, pemberian sampel, pengumpulan survei atau opini dari lingkungan, keluarga, rekan maupun perusahaan sekitar kami ..kami pun akhirnya dapat membuat rasa yang sebagian besar diterima dan disukai oleh banyak orang. 
+                            Masukan-masukan berharga ini kami kumpulkan sebagai bahan review, pelajaran dan pengembangan produk.
+                            Kami mulai menjual dan mempromosikan produk olahan kami melalui beberapa platform media sosial, seperti Instagram, WhatsApp dan Website. Hasilnya adalah, kami menerima banyak respon positif. 
                             Saat ini penjualan kami pun mulai meningkat serta kami pun mulai mendapatkan pelanggan tetap.
-                            Kami berharap untuk dapat terus memberikan produk yang terbaik, saat ini dan selamanya.</p>
+                            Kami berharap dapat terus memberikan produk yang terbaik, untuk saat ini dan selamanya.</p>
                         <p class="card-text"><small class="text-muted fst-italic"><u>Founder Dapur Mamizey</u></small></p>
                     </div>
                     <hr>
