update img description

--- a/assets/full menu.html
+++ b/assets/full menu.html
@@ -82,19 +82,13 @@
                     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
                         <div class="col py-1">
                             <div class="card">
-                                <img src="./img/test2.webp" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col py-1">
-                            <div class="card">
                                 <img src="./img/test6.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                                    <h6 class="card-title">Ayam Geprek Sambal Original</h6>
+                                    <p class="font-monospace text-primary m-0">Rp18,000.00</p>
+                                </div>
+                                <div class="card-footer">
+                                    <small class="text-muted">*Sudah termasuk Nasi putih.</small>
                                 </div>
                             </div>
                         </div>
@@ -102,8 +96,11 @@
                             <div class="card">
                                 <img src="./img/test5.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                                    <h6 class="card-title">Ayam Geprek Sambal Kacang</h6>
+                                    <p class="font-monospace text-primary m-0">Rp18,000.00</p>
+                                </div>
+                                <div class="card-footer">
+                                    <small class="text-muted">*Sudah termasuk Nasi putih.</small>
                                 </div>
                             </div>
                         </div>
@@ -111,8 +108,11 @@
                             <div class="card">
                                 <img src="./img/test4.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                                    <h6 class="card-title">Mie Ayam Geprek</h6>
+                                    <p class="font-monospace text-primary m-0">Rp18,000.00</p>
+                                </div>
+                                <div class="card-footer">
+                                    <small class="text-muted">*Sudah termasuk Nasi putih.</small>
                                 </div>
                             </div>
                         </div>
@@ -120,8 +120,11 @@
                             <div class="card">
                                 <img src="./img/test3.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                                    <h6 class="card-title">Ayam Goreng</h6>
+                                    <p class="font-monospace text-primary m-0">Rp18,000.00</p>
+                                </div>
+                                <div class="card-footer">
+                                    <small class="text-muted">*Sudah termasuk Nasi putih.</small>
                                 </div>
                             </div>
                         </div>
@@ -129,8 +132,11 @@
                             <div class="card">
                                 <img src="./img/test1.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                                    <h6 class="card-title">Ayam Bakar</h6>
+                                    <p class="font-monospace text-primary m-0">Rp18,000.00</p>
+                                </div>
+                                <div class="card-footer">
+                                    <small class="text-muted">*Sudah termasuk Nasi putih.</small>
                                 </div>
                             </div>
                         </div>
@@ -138,8 +144,11 @@
                             <div class="card">
                                 <img src="./img/Soto-1.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                                    <h6 class="card-title">Soto Daging</h6>
+                                    <p class="font-monospace text-primary m-0">Rp18,000.00</p>
+                                </div>
+                                <div class="card-footer">
+                                    <small class="text-muted">*Sudah termasuk Nasi putih.</small>
                                 </div>
                             </div>
                         </div>
@@ -147,8 +156,11 @@
                             <div class="card">
                                 <img src="./img/Soto-2.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                                    <h6 class="card-title">Soto Ayam</h6>
+                                    <p class="font-monospace text-primary m-0">Rp18,000.00</p>
+                                </div>
+                                <div class="card-footer">
+                                    <small class="text-muted">*Sudah termasuk Nasi putih.</small>
                                 </div>
                             </div>
                         </div>
@@ -156,8 +168,11 @@
                             <div class="card">
                                 <img src="./img/Tempe-1.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                                    <h6 class="card-title">Tempe Goreng</h6>
+                                    <p class="font-monospace text-primary m-0">Rp3,000.00</p>
+                                </div>
+                                <div class="card-footer">
+                                    <small class="text-muted">*Harga satuan.</small>
                                 </div>
                             </div>
                         </div>
@@ -165,8 +180,11 @@
                             <div class="card">
                                 <img src="./img/Tahu-1.webp" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                                    <h6 class="card-title">Tahu Goreng</h6>
+                                    <p class="font-monospace text-primary m-0">Rp3,000.00</p>
+                                </div>
+                                <div class="card-footer">
+                                    <small class="text-muted">*Harga satuan.</small>
                                 </div>
                             </div>
                         </div>
