--- a/assets/full menu.html
+++ b/assets/full menu.html
@@ -82,7 +82,7 @@
                     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
                         <div class="col py-1">
                             <div class="card">
-                                <img src="./img/test6.webp" class="card-img-top" alt="...">
+                                <img src="./img/test6.webp" class="card-img-top" alt="Ayam Geprek Sambal Original">
                                 <div class="card-body">
                                     <h6 class="card-title">Ayam Geprek Sambal Original</h6>
                                     <p class="font-monospace text-primary m-0">Rp18,000.00</p>
@@ -94,7 +94,7 @@
                         </div>
                         <div class="col py-1">
                             <div class="card">
-                                <img src="./img/test5.webp" class="card-img-top" alt="...">
+                                <img src="./img/test5.webp" class="card-img-top" alt="Ayam Geprek Sambal Kacang">
                                 <div class="card-body">
                                     <h6 class="card-title">Ayam Geprek Sambal Kacang</h6>
                                     <p class="font-monospace text-primary m-0">Rp18,000.00</p>
@@ -106,7 +106,7 @@
                         </div>
                         <div class="col py-1">
                             <div class="card">
-                                <img src="./img/test4.webp" class="card-img-top" alt="...">
+                                <img src="./img/test4.webp" class="card-img-top" alt="Mie Ayam Geprek">
                                 <div class="card-body">
                                     <h6 class="card-title">Mie Ayam Geprek</h6>
                                     <p class="font-monospace text-primary m-0">Rp18,000.00</p>
@@ -118,7 +118,7 @@
                         </div>
                         <div class="col py-1">
                             <div class="card">
-                                <img src="./img/test3.webp" class="card-img-top" alt="...">
+                                <img src="./img/test3.webp" class="card-img-top" alt="Ayam Goreng">
                                 <div class="card-body">
                                     <h6 class="card-title">Ayam Goreng</h6>
                                     <p class="font-monospace text-primary m-0">Rp18,000.00</p>
@@ -130,7 +130,7 @@
                         </div>
                         <div class="col py-1">
                             <div class="card">
-                                <img src="./img/test1.webp" class="card-img-top" alt="...">
+                                <img src="./img/test1.webp" class="card-img-top" alt="Ayam Bakar">
                                 <div class="card-body">
                                     <h6 class="card-title">Ayam Bakar</h6>
                                     <p class="font-monospace text-primary m-0">Rp18,000.00</p>
@@ -142,7 +142,7 @@
                         </div>
                         <div class="col py-1">
                             <div class="card">
-                                <img src="./img/Soto-1.webp" class="card-img-top" alt="...">
+                                <img src="./img/Soto-1.webp" class="card-img-top" alt="Soto Daging">
                                 <div class="card-body">
                                     <h6 class="card-title">Soto Daging</h6>
                                     <p class="font-monospace text-primary m-0">Rp18,000.00</p>
@@ -154,7 +154,7 @@
                         </div>
                         <div class="col py-1">
                             <div class="card">
-                                <img src="./img/Soto-2.webp" class="card-img-top" alt="...">
+                                <img src="./img/Soto-2.webp" class="card-img-top" alt="Soto Ayam">
                                 <div class="card-body">
                                     <h6 class="card-title">Soto Ayam</h6>
                                     <p class="font-monospace text-primary m-0">Rp18,000.00</p>
@@ -166,7 +166,7 @@
                         </div>
                         <div class="col py-1">
                             <div class="card">
-                                <img src="./img/Tempe-1.webp" class="card-img-top" alt="...">
+                                <img src="./img/Tempe-1.webp" class="card-img-top" alt="Tempe Goreng">
                                 <div class="card-body">
                                     <h6 class="card-title">Tempe Goreng</h6>
                                     <p class="font-monospace text-primary m-0">Rp3,000.00</p>
@@ -178,7 +178,7 @@
                         </div>
                         <div class="col py-1">
                             <div class="card">
-                                <img src="./img/Tahu-1.webp" class="card-img-top" alt="...">
+                                <img src="./img/Tahu-1.webp" class="card-img-top" alt="Tahu Goreng">
                                 <div class="card-body">
                                     <h6 class="card-title">Tahu Goreng</h6>
                                     <p class="font-monospace text-primary m-0">Rp3,000.00</p>
