change h3 text color

--- a/assets/full menu.html
+++ b/assets/full menu.html
@@ -71,7 +71,7 @@
         <div data-aos="zoom-in" data-aos-duration="1000">
             <div class="container pt-3">
                 <div data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1000">
-                    <h3 class="text-center">Discover
+                    <h3 class="text-center text-secondary">Discover
                         <span class="text-warning">Our Menu</span>
                     </h3>
                 </div>
