--- a/assets/how to order.html
+++ b/assets/how to order.html
@@ -71,14 +71,14 @@
         <div data-aos="zoom-in" data-aos-duration="1000">
             <div class="container pt-3">
                 <div data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1000">
-                    <h3 class="text-center">Tata Cara
+                    <h3 class="text-center text-secondary">Tata Cara
                         <span class="text-warning">Pemesanan</span>
                     </h3>
                 </div>
             </div>
 
             <div class="container pt-3">
-                <p class="lead"> Format Order :</p>
+                <p class="lead">Format Order :</p>
                 <ol>
                     <li>Nama</li>
                     <li>Alamat Lengkap</li>
@@ -103,7 +103,7 @@
 
         <div class="container pt-3">
             <div data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1000">
-                <h3 class="text-center">Discover
+                <h3 class="text-center text-secondary">Discover
                     <span class="text-warning">Our Menu</span>
                 </h3>
             </div>
