--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <main>
         <div class="container pt-3">
             <div data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1000">
-                <h3 class="text-center">Discover
+                <h3 class="text-center text-secondary">Discover
                     <span class="text-warning">Our Menu</span>
                 </h3>
             </div>
@@ -202,7 +202,7 @@
 
         <div class="container pt-4">
             <div data-aos="zoom-in-up" data-aos-duration="1000">
-                <h3 class="text-center">Discover
+                <h3 class="text-center text-secondary">Discover
                     <span class="text-warning">Our Story</span>
                 </h3>
                 <p class="lh-base text-start pt-3">Dapur Mamizey, itulah nama yang terpikirkan oleh kami saat mencoba menjual dan memasarkan produk olahan dengan fokus utama adalah ayam. 
@@ -213,7 +213,7 @@
 
         <div class="container pt-5">
             <div data-aos="zoom-in-up" data-aos-duration="1000">
-                <h3 class="text-center">Ready
+                <h3 class="text-center text-secondary">Ready
                     <span class="text-warning">to Order?</span>
                 </h3>
                 <p class="lead lh-base text-center pt-3">Lihat tata cara pemesanan&nbsp;<a href="./assets/how to order.html" class="link-primary text-decoration-none">disini</a>.</p>
