--- a/assets/about.html
+++ b/assets/about.html
@@ -82,7 +82,7 @@
                     <hr>
                     <div class="container pt-3">
                         <div data-aos="zoom-in" data-aos-anchor-placement="top-bottom" data-aos-duration="1000">
-                            <h3 class="text-center">Our
+                            <h3 class="text-center text-secondary">Our
                                 <span class="text-warning">Farmer Landscape</span>
                             </h3>
                         </div>
