--- a/assets/contact.html
+++ b/assets/contact.html
@@ -86,7 +86,7 @@
 
         <div class="container pt-3">
             <div data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="1000">
-                <h3 class="text-center">Discover
+                <h3 class="text-center text-secondary">Discover
                     <span class="text-warning">Our Menu</span>
                 </h3>
             </div>
