--- a/assets/how to order.html
+++ b/assets/how to order.html
@@ -59,9 +59,7 @@
         
         <div class="container pt-4">
             <div data-aos="fade-down" data-aos-duration="1000">
-                <h1 class="display-5 fw-bold text-center text-dark">Welcome to
-                    <span class="d-inline-block">Dapur Mamizey</span>
-                </h1>
+                <h1 class="display-4 fw-bold text-center text-warning">Dapur Mamizey</h1>
                 <hr>
             </div>
         </div>   
