change h1 and h3 color

--- a/assets/contact.html
+++ b/assets/contact.html
@@ -59,7 +59,7 @@
         
         <div class="container pt-4">
             <div data-aos="fade-down" data-aos-duration="1000">
-                <h1 class="display-4 fw-bold text-center text-warning font-monospace">Dapur Mamizey</h1>
+                <h1 class="display-4 fw-bold text-center text-dark">Dapur Mamizey</h1>
                 <hr>
             </div>
         </div>   
@@ -68,7 +68,7 @@
     <main>
         <div class="container pt-3">
             <div data-aos="zoom-in" data-aos-duration="1000">
-                <h3 class="text-center lh-sm">Ada pertanyaan?
+                <h3 class="text-center lh-sm text-secondary">Ada pertanyaan?
                     <span class="d-inline-block text-reset">Klik tombol WhatsApp dibawah ini:</span>
                 </h3>
             </div>
