--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         
         <div class="container pt-4">
             <div data-aos="fade-down" data-aos-duration="1000">
-                <h1 class="display-4 fw-bold text-center text-warning font-monospace">Dapur Mamizey</h1>
+                <h1 class="display-4 fw-bold text-center text-dark">Dapur Mamizey</h1>
                 <hr>
             </div>
         </div>
