change text color

--- a/assets/about.html
+++ b/assets/about.html
@@ -64,7 +64,7 @@
                 <div class="card text-dark bg-white border-warning mb-3">
                     <h5 class="card-header">Tentang Dapur Mamizey</h5>
                       <div class="card-body">
-                        <p class="card-text text-start lh-base">Dapur Mamizey pertama kali dibuka pada tahun 2020. Awalnya ini hanya bagian dari rencana untuk memperoleh penghasilan lebih karena tren periode wfh selama pandemi. 
+                        <p class="card-text text-start lh-base text-secondary">Dapur Mamizey pertama kali dibuka pada tahun 2020. Awalnya ini hanya bagian dari rencana untuk memperoleh penghasilan lebih karena tren periode wfh selama pandemi. 
                             Kami bekerja keras untuk menemukan ide bisnis apa yang ingin kami mulai, setelah beberapa waktu ..kami berpikir bahwa ada kesempatan untuk mencoba menjual makanan. 
                             Ini pun berdasarkan hasil observasi dari naik nya jumlah pengguna maupun transaksi pembelian makanan dan minuman secara online. 
                             Banyak orang yang menghindari kontak atau pembelian secara langsung.
@@ -72,12 +72,12 @@
                             Karena lokasi peternak yang dekat, kami pun dapat secara rutin mengunjungi untuk melihat bagaimana kualitas produk ayam sampai dengan proses pemotongan. 
                             Kami melakukan ini untuk memastikan jika nantinya produk yang kami hasilkan berasal dari bahan baku yang bersih dan berkualitas.</p>
 
-                        <p>Setelah melalui banyak uji coba rasa, pemberian sampel, pengumpulan survei atau opini dari lingkungan, keluarga, rekan maupun perusahaan sekitar kami ..kami pun akhirnya dapat membuat rasa yang sebagian besar diterima dan disukai oleh banyak orang. 
+                        <p class="card-text text-start lh-base text-secondary">Setelah melalui banyak uji coba rasa, pemberian sampel, pengumpulan survei atau opini dari lingkungan, keluarga, rekan maupun perusahaan sekitar kami ..kami pun akhirnya dapat membuat rasa yang sebagian besar diterima dan disukai oleh banyak orang. 
                             Masukan-masukan berharga ini kami kumpulkan sebagai bahan review, pelajaran dan pengembangan produk.
                             Kami mulai menjual dan mempromosikan produk olahan kami melalui beberapa platform media sosial, seperti Instagram, WhatsApp dan Website. Hasilnya adalah, kami menerima banyak respon positif. 
                             Saat ini penjualan kami pun mulai meningkat serta kami pun mulai mendapatkan pelanggan tetap.
                             Kami berharap dapat terus memberikan produk yang terbaik, untuk saat ini dan selamanya.</p>
-                        <p class="card-text"><small class="text-muted fst-italic"><u>Founder Dapur Mamizey</u></small></p>
+                        <p class="card-text"><small class="text-dark fst-italic"><u>Founder Dapur Mamizey</u></small></p>
                     </div>
                     <hr>
                     <div class="container pt-3">
