--- a/assets/contact.html
+++ b/assets/contact.html
@@ -103,7 +103,7 @@
                                         <img src="../assets/img/test2.webp" class="card-img-top" alt="Ayam Geprek"/>
                                         <div class="card-body">
                                             <h5 class="card-title">Ayam Geprek</h5>
-                                            <p class="card-text">Sensasi pedas gurihnya, dan juga rasa crispy yang khas dari ayamnya dijamin bikin nagih deh.</p>
+                                            <p class="card-text text-secondary">Sensasi pedas gurihnya, dan juga rasa crispy yang khas dari ayamnya dijamin bikin nagih deh.</p>
                                             <p class="font-monospace text-primary m-0">Rp18,000.00</p>
                                         </div>
                                         <div class="card-footer">
@@ -117,7 +117,7 @@
                                         <img src="../assets/img/test1.webp" class="card-img-top" alt="Ayam Bakar" />
                                         <div class="card-body">
                                             <h5 class="card-title">Ayam Bakar</h5>
-                                            <p class="card-text">Bumbu ungkep rahasia kami bikin rasa Ayam Bakar jadi ga biasa. Penasaran? Yuk segera pesan!</p>
+                                            <p class="card-text text-secondary">Bumbu ungkep rahasia kami bikin rasa Ayam Bakar jadi ga biasa. Penasaran? Yuk segera pesan!</p>
                                             <p class="font-monospace text-primary m-0">Rp18,000.00</p>
                                         </div>
                                         <div class="card-footer">
@@ -131,7 +131,7 @@
                                         <img src="../assets/img/test3.webp" class="card-img-top" alt="Ayam Goreng" />
                                         <div class="card-body">
                                             <h5 class="card-title">Ayam Goreng</h5>
-                                            <p class="card-text">Rasa gurih, empuk dan bertekstur lembut yang di-olah dengan bumbu rahasia, dijamin menggugah selera.</p>
+                                            <p class="card-text text-secondary">Rasa gurih, empuk dan bertekstur lembut yang di-olah dengan bumbu rahasia, dijamin menggugah selera.</p>
                                             <p class="font-monospace text-primary m-0">Rp18,000.00</p>
                                         </div>
                                         <div class="card-footer">
@@ -150,7 +150,7 @@
                                         <img src="../assets/img/test5.webp" class="card-img-top" alt="Ayam Geprek Sambal Kacang"/>
                                         <div class="card-body">
                                             <h5 class="card-title">Ayam Geprek Sambal Kacang</h5>
-                                            <p class="card-text">Sensasi pedas gurih dari kacang, dan juga rasa crispy yang khas dari ayamnya pasti bikin nagih deh.</p>
+                                            <p class="card-text text-secondary">Sensasi pedas gurih dari kacang, dan juga rasa crispy yang khas dari ayamnya pasti bikin nagih deh.</p>
                                             <p class="font-monospace text-primary m-0">Rp18,000.00</p>
                                         </div>
                                         <div class="card-footer">
@@ -164,7 +164,7 @@
                                         <img src="../assets/img/test4.webp" class="card-img-top" alt="Mie Ayam Geprek" />
                                         <div class="card-body">
                                             <h5 class="card-title">Mie Ayam Geprek</h5>
-                                            <p class="card-text">Kombinasi nikmat menggugah selera, mudah dibuat tapi beda rasa. Cuma Dapur Mamizey yang bisa!</p>
+                                            <p class="card-text text-secondary">Kombinasi nikmat menggugah selera, mudah dibuat tapi beda rasa. Cuma Dapur Mamizey yang bisa!</p>
                                             <p class="font-monospace text-primary m-0">Rp18,000.00</p>
                                         </div>
                                         <div class="card-footer">
@@ -178,7 +178,7 @@
                                         <img src="../assets/img/test6.webp" class="card-img-top" alt="Ayam Geprek Sambal Original" />
                                         <div class="card-body">
                                             <h5 class="card-title">Ayam Geprek Sambal Original</h5>
-                                            <p class="card-text">Sensasi pedas gurihnya, dan juga rasa crispy yang khas dari ayamnya pasti bikin nagih deh.</p>
+                                            <p class="card-text text-secondary">Sensasi pedas gurihnya, dan juga rasa crispy yang khas dari ayamnya pasti bikin nagih deh.</p>
                                             <p class="font-monospace text-primary m-0">Rp18,000.00</p>
                                         </div>
                                         <div class="card-footer">
