--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     <!--AOS JS-->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-      AOS.init();
+        AOS.init({once: true});
     </script>
 
 </body>
