--- a/assets/about.html
+++ b/assets/about.html
@@ -113,8 +113,8 @@
             <span>Made with&nbsp;<i class="bi bi-heart-fill"></i>&nbsp;by&nbsp;<a href="https://rifaim.github.io/Portfolio/" class="link-primary text-decoration-none">Author</a>.</span>
             <div class="btn-group" role="group">
                 <a class="btn btn-outline-secondary btn-sm text-dark" href="https://api.whatsapp.com/send/?phone=6289644937526&amp;text=Terimakasih%20telah%20menghubungi%20Pisang%20Ijo%20Ummi%20AL.%0A%0ASilahkan%20sampaikan%20masukan%20atau%20pertanyaan%20anda%20%3A%0A%0A" role="button"><i class="bi bi-whatsapp"></i></a>
-                <a class="btn btn-outline-secondary btn-sm text-dark" href="https://www.instagram.com/mchrifai/" role="button"><i class="bi bi-instagram"></i></a>
-                <a class="btn btn-outline-secondary btn-sm text-dark" href="mailto:rifaialc@gmail.com?subject=Pertanyaan%2C%20Saran%20%2F%20Masukan&body=Terimakasih%20telah%20menghubungi%20Es%20Pisang%20Ijo%20Ummi%20AL.%0A%0ASilahkan%20masukan%20pertanyaan%20atau%20masukan%20Anda%20%3A%0A%0A" role="button"><i class="bi bi-envelope"></i></a>
+                <a class="btn btn-outline-secondary btn-sm text-dark" href="https://www.instagram.com/raaiimm_/" role="button"><i class="bi bi-instagram"></i></a>
+                <a class="btn btn-outline-secondary btn-sm text-dark" href="mailto:jouwilldie@gmail.com?subject=Pertanyaan%2C%20Saran%20%2F%20Masukan&body=Terimakasih%20telah%20menghubungi%20Es%20Pisang%20Ijo%20Ummi%20AL.%0A%0ASilahkan%20masukan%20pertanyaan%20atau%20masukan%20Anda%20%3A%0A%0A" role="button"><i class="bi bi-envelope"></i></a>
             </div>
         </div>
     </footer>
